<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Pomodoro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pomo_running">PomoRunning</string>
    <string name="title_activity_finish_screen">Finish</string>
    <string name="title_activity_Preference">Preference</string>
    <string name="title_activity_break">Break Time</string>
    <string name="title_record">Record</string>
    <string name="title_task">Task</string>
    <string name="title_today">Today</string>
    <string name="title_total">Total</string>
    <string name="start">Start!</string>
    <string name="stop">Stop</string>
    <string name="running_in_background">Running in background</string>
    <string name="do_you_wish_to_stop">Do you wish to stop?</string>
    <string name="stop_pomodoro">Stop Pomodoro?</string>
    <string name="break_time_up">Break time\'s UP</string>
    
    <!-- Circle View -->
    <string name="time_up">Time\'s UP</string>
    <string name="tap_to_break">Tap to Break</string>
    <!-- CDService -->
    <string name="take_a_break">Take a break</string>
    <string name="cancel">Cancel</string>
    <string name="pomodoro_time_up">Pomodoro time\'s up</string>
    <string name="now_you_can_take_a_break">Now you can take a break</string>


    <!-- BreakFinishService -->
    <string name="continue_pomodoro">Continue</string>
    <string name="now_you_can_continue_your_pomodoro">Now you can continue your pomodoro</string>
    <string name="tap_to_continue_your_pomodoro">Tap to continue your pomodoro</string>

    <!-- Preference -->
    <string name="pref_title_display">Display</string>
    <string name="pref_enable_fullscreen">Enable fullscreen</string>
    <string name="pref_lights_on">Lights on</string>
    <string name="pref_lights_on_summary">Prevent the screen from turning off when pomodoro is running</string>
    <string name="pref_theme">Theme</string>

    <string-array name="pref_theme_list">
        <item>Black</item>
        <item>White</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>black</item>
        <item>white</item>
    </string-array>

    <string name="pref_title_weekly_statistics">Weekly Statistics</string>
    <string name="pref_use_pie_chart">Show pie chart</string>
    <string name="pref_first_day">First day</string>

    <string-array name="pref_first_day_list">
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="pref_first_day_values">
        <item>sunday</item>
        <item>monday</item>
    </string-array>

    <string name="pref_daily_goal">Set daily goal</string>
    <string name="pref_view_full_statistics">View full statistics</string>
    <string name="pref_view_full_statistics_summary">after sync with google account</string>
    <string name="pref_title_timer_settings">Timer</string>
    <string name="pref_break_duration">Break duration</string>

    <string-array name="pref_break_duration_list">
        <item>3 min</item>
        <item>5 min</item>
        <item>8 min</item>
    </string-array>
    <string-array name="pref_break_duration_values">
        <item>3</item>
        <item>5</item>
        <item>8</item>
    </string-array>

    <string name="pref_long_break_duration">Long break duration</string>

    <string-array name="pref_long_break_duration_list">
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
    </string-array>
    <string-array name="pref_long_break_duration_values">
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string name="pref_pomodoro_duration">Pomodoro duration</string>

    <string-array name="pref_pomodoro_duration_list">
        <item>25 min</item>
        <item>30 min</item>
        <item>35 min</item>
    </string-array>
    <string-array name="pref_pomodoro_duration_values">
        <item>25</item>
        <item>30</item>
        <item>35</item>
    </string-array>

    <string name="pref_title_timers_end_alert">Timer\'s end alert</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_enable_vibrations">Enable vibrations</string>
    <string name="pref_title_labs">Labs</string>
    <string name="pref_fast_mode">FAST MODE</string>
    <string name="pref_fast_mode_summary">Auto lock/unlock screen when pomodoro start/finish</string>
    <string name="pref_remove_manage">Remove administration manage</string>
    <string name="pref_silent_mode">DO NOT DISTURB</string>
    <string name="pref_silent_mode_summary">Auto disable/enable network when pomodoro start/finish</string>
    <string name="pref_remove_manage_summary">To uninstall the app, please FIRST click me!!</string>
    <string name="pref_title_sync">Sync</string>
    <string name="pref_sync_with_google_task">Sync with google task</string>
    <string name="pref_sync_with_google_task_summary">Not recommend!</string>
    <string name="pref_choose_account">Choose account</string>
    <string name="pref_title_info">Info</string>
    <string name="pref_email_us">Feedback</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">"The application is based on the "Pomodoro Technique®", a way to get the most out of time management.</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="screen_locker_warnning">To uninstall the app, please FIRST click the "Remove administration manage" button</string>

    <!-- Recorder -->
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string><!-- Do NOT change the [%s] -->
    <string name="title_activity_break_finish">BreakFinishActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="daily_goal_error">ERROR:Daily goal is not a number, please correct it in Setting.</string>
    <string name="title_activity_cal">CalActivity</string>

    <!-- About -->
    <string name="author">Author</string>
    <string name="dacer">Dacer</string>
    <string name="website">Webiste</string>
    <string name="website_url">http://dacer.github.io/myapps/en</string>
    <string name="donate_title">Donate</string>
    <string name="donate_via">Donate</string>
    <string name="donate_summary">paypal/alipay:dacerfeedback@gmail.com</string>
    <string name="about_pomodoro">About pomodoro</string>
    
    <string name="send_email_title">THIS PROJECT IS NO LONGER BEING MAINTAINED</string>
    <string name="send_email_context">No more new feature request please, let\'s keep it simple:)\n\nThank you everyone for your help and support!\n\nParticular thanks to:\n\nNeo Tian(Publish)\n\nBiao H Yu (Donation)\n\nJonathan Gall(French Translation)\n\nJose Miguel Urdaneta(Spanish Translation)\n\nMaciej Bończak(Polish Translation)\n\nHowever, if you have any other questions feel free to contact me:  dacerfeedback@gmail.com\n\nDacer\n\nSincerely</string>
    
    <!-- Game -->
    <string name="game_over">Game Over</string>
    <string name="your_score_is">Your score is :</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    
    <!-- notification in RunningActivity -->
    <string name="sp_is_running">SimplePomodoro is running</string>
    <string name="click_to_return">Click to return</string>
    <string name="break_time">Break time</string>
    
    <string name="debug_mode">Debug mode</string>
    <string name="debug_mode_summary">The duration will be always 1 min</string>
    
    <!-- google task  -->
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_title">Task title</string>
    <string name="the_title_can_not_be_empty">The title cannot be empty!</string>
    <string name="ok">OK</string>
    <string name="Sync_with_google_task_is_not_enabled">Sync with google task is not enabled</string>
    
    <!-- initTask  -->
    <string name="swipe_right_to_finish">Swipe right to finish</string>
    <string name="click_plus_to_add_task">Click \"+\" to add task</string>
    <string name="pull_to_sync">Pull to sync with google task</string>
    <string name="hold_plus_to_change_account">Hold \"+\" to change account</string>
    <string name="i_from_web">I\'m from google task:)</string>
    
    <!-- Thanks  -->
    <string name="thanks">Thanks</string>
    
    <string name="tossking">tossking(Neo Tian)</string>
    <string name="help_me_publish_app">Help me publish the app</string>

    <string name="jonathan_gall">Jonathan Gall</string>
    <string name="jonathan_gall_summary">French Translation</string>
    
    <string name="jose_miguel_urdaneta">Jose Miguel Urdaneta</string>
    <string name="jose_miguel_urdaneta_summary">Spanish Translation</string>
    
    <string name="maciej">Maciej Bończak</string>
    <string name="maciej_summary">Polish Translation</string>
    
    <string name="xiaomi_mode">XiaoMi Mode</string>
    <string name="xiaomi_mode_summary">For XiaoMi phones</string>
    <string name="tick_sound_disabled">Tick sound disabled</string>
    <string name="tick_sound_enabled">Tick sound enabled</string>
    
    <string name="pref_enable_ticking">Enable ticking sound</string>
    
    <string name="detect_is_miphone">You seem using XiaoMi Phone</string>
    <string name="miphone_message">Mi Mode is auto enabled, if you are not using XiaoMi Phone please turn off in setting manually.</string>
    	
    <!-- big font  -->
    <string name="big_font_enabled">Big Font Enabled</string>
    <string name="big_font_disabled">Big Font Disabled</string>
</resources>