<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#33B5E5"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/new_task"
        android:textColor="#0099cc"
        android:textSize="33sp"
        android:textStyle="bold"
        android:typeface="monospace" />
    
    <View 
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#0099cc"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/task_title" />

</LinearLayout>