<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#33B5E5"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/game_over"
        android:textColor="#fffffb"
        android:textSize="33sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/your_score_is"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_score_text"
            android:layout_toRightOf="@id/tv_score_text"
            android:text="9"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="6dp" >
    </RelativeLayout>

</LinearLayout>