<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tv_title_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_record"
        android:textColor="#ffffff"
        android:textSize="83sp" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_title_record"
        android:background="#80000000"
        android:src="@drawable/ic_action_overflow" />

       <dacer.views.WeekCirView
        android:id="@+id/weekCirView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_title_record"
        android:layout_below="@id/tv_title_record" />
       
       <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

	<TextView
	    android:id="@+id/tv_total_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="15dp"
	    android:text="@string/title_total"
	    android:textColor="#ffffff"
	    android:textSize="38sp" />

    <TextView
        android:id="@+id/tv_today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_total_text"
        android:layout_alignLeft="@+id/tv_total_text"
        android:text="@string/title_today"
        android:textColor="#ffffff"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_today_text"
        android:layout_alignBottom="@+id/tv_today_text"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/tv_today_text"
        android:text=": 8"
        android:textColor="#ffffff"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/tv_total_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_total_text"
        android:layout_alignBottom="@+id/tv_total_text"
        android:layout_alignLeft="@+id/tv_today"
        android:text=": 20"
        android:textColor="#ffffff"
        android:textSize="38sp" />
    </RelativeLayout>

</RelativeLayout>